--- a/problem-c/css/style.css
+++ b/problem-c/css/style.css
@@ -1,4 +1,65 @@
+* {
+  box-sizing: border-box;
+}
+
+html {
+  height: 100%;
+}
+
+main {
+  flex: 1;
+}
+
 body {
   font-family: "Lato", "Helvetica Neue", "Helvetica", sans-serif;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  height: inherit;
+}
+
+.container {
+  display: flex;
+  height: 100%;
+}
+
+section {
+  padding: 1em;
+}
+
+.first_section {
+  flex-basis: 240px;
+}
+
+.second_section {
+  flex: 1;
+  background-color: #eee;
+  flex-basis: 0;
+}
+
+.third_section {
+  flex-basis: 180px;
+  flex-shrink: 0;
+}
+
+.image_section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.image_card {
+  flex: 0 0 250px;
+  background-color: white;
+  margin: .5rem;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.16), 0 1px 3px rgba(0,0,0,0.23);
+  border-radius: 10px;
+}
+
+.image_card p {
+  padding: .5rem 1rem;
+}
+
+img {
+  border-radius: 10px 10px 0 0;
 }
